# ThreeBodySimulation

./: README.md  gradle.properties  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/kotlin/com/hsntncy/gdgeskisehir/: App.kt  MainActivity.kt  ThreeBodyViewModel.kt
composeApp/src/androidMain/kotlin/com/hsntncy/gdgeskisehir/component/: SpaceCanvas.kt
composeApp/src/androidMain/kotlin/com/hsntncy/gdgeskisehir/model/: PlanetUiState.kt  SimMode.kt  Star.kt
composeApp/src/androidMain/kotlin/com/hsntncy/gdgeskisehir/ui/: ThreeBodyScreen.kt
composeApp/src/androidMain/res/values/: strings.xml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: ContentView.swift  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp/Simulation/Model/: SimulationUiModels.swift
iosApp/iosApp/Simulation/View/: SpaceCanvas.swift  ThreeBodyScreen.swift
iosApp/iosApp/Simulation/Viewmodel/: ThreeBodyViewModel.swift
shared/: build.gradle.kts
shared/src/androidMain/cpp/: CMakeLists.txt  native-lib.cpp
shared/src/androidMain/kotlin/com/hsntncy/gdgeskisehir/: Platform.android.kt  ThreeBodyEngine.android.kt
shared/src/commonMain/kotlin/com/hsntncy/gdgeskisehir/: Greeting.kt  Platform.kt  SimulationModels.kt  ThreeBodyEngine.kt
shared/src/iosMain/kotlin/com/hsntncy/gdgeskisehir/: Platform.ios.kt  ThreeBodyEngine.ios.kt
shared/src/nativeInterop/cinterop/: box2d.def
